tests/AST/if-mismatched-branches.bel
# RUN: %not %belalang build --emit ast %s | %FileCheck %s

val := if true {
    1
} else {
    "hello"
}

# CHECK:      error: mismatched type
# CHECK-NEXT:  --> {{.*}}/tests/AST/if-mismatched-branches.bel:5:8
# CHECK-NEXT:   |
# CHECK-NEXT: 5 |   } else {
# CHECK-NEXT:   |  ________^
# CHECK-NEXT: 6 | |     "hello"
# CHECK-NEXT: 7 | | }
# CHECK-NEXT:   | |_^ expected type `Integer`, found type `String`
